--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,9 @@
     <p><a href="{{ url_for('main.dashboard') }}" class="btn btn-success">Go to Dashboard</a></p>
 {% endif %}
 
-<h3>Features:</h3>
+<h3>Get To:</h3>
 <ul>
-    <li>Google Login</li>
     <li>Customer Management</li>
     <li>Order Tracking</li>
-    <li>SMS Notifications</li>
 </ul>
 {% endblock %}
