--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -78,6 +78,7 @@
                     <th>Customer</th>
                     <th>Price</th>
                     <th>Date</th>
+                    <th>Action</th>
                 </tr>
                 {% for order in orders %}
                 <tr>
@@ -85,6 +86,17 @@
                     <td>{{ order.customer.name }}</td>
                     <td>${{ "%.2f"|format(order.price) }}</td>
                     <td>{{ order.created_at.strftime('%m/%d/%Y') }}</td>
+                    <td>
+                    <form method="POST" action="{{ url_for('main.delete_order', order_id=order.id) }}" style="display:inline;">
+                        <button 
+                            type="submit" 
+                            class="btn btn-danger"
+                            onclick="return confirm('Are you sure you want to delete this order?');">
+                            Delete
+                        </button>
+                    </form>
+                </td>
+                    
                 </tr>
                 {% endfor %}
             </table>
